Revert "Fixed sidebar and content overlapping"
This reverts commit 12ea83dd43e841ea02525c32a8734989faade072.

--- a/assets/css/simple-sidebar.css
+++ b/assets/css/simple-sidebar.css
@@ -143,10 +143,4 @@
         position: relative;
         margin-right: 0;
     }
-
-    /* this is for the side-bar not overlap the content */
-    .content {
-        padding-left: 250px
-    }
 }
-
